--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
-  }
+  },
+  "name": "ppblog",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/MartinFacorro/ppblog.git",
+  "author": "Martin Facorro <mfacorro@live.com.ar>",
+  "license": "MIT"
 }
