--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "next start",
     "typecheck": "tsc"
   },
+  "engines": { 
+    "npm": ">=10.2.4",
+    "node": ">=20.11.1"
+  },
   "dependencies": {
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
